bitcoin and ethereum

--- a/docs/_posts/2024-03-08-whats_web3.md
+++ b/docs/_posts/2024-03-08-whats_web3.md
@@ -64,3 +64,10 @@ Stablecoin
 
 发币、集资
 
+### Web3的缺点
+
+* 交易费用高: layer2 scaling
+* 使用门槛高: 更易用的钱包等
+* 用户教育:
+* 依赖中心化基础设施，比如：Github, Twitter, Discord, etc.
+
